--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@emotion/styled": "^11.14.1",
     "@google/genai": "^1.34.0",
     "@hookform/resolvers": "^5.2.2",
+    "@langchain/community": "^1.1.1",
+    "@langchain/core": "^1.1.8",
+    "@langchain/groq": "^1.0.2",
     "@mui/icons-material": "^7.3.6",
     "@mui/material": "^7.3.6",
     "@radix-ui/react-avatar": "^1.1.11",
@@ -30,6 +33,7 @@
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
+    "langchain": "^1.2.3",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
     "react-chartjs-2": "^5.3.1",
